2018-12-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Add more missing material.

2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.all/default_procs.tcl: Whitespace clean up.
	(lib_pat_test): Handle an argument list instead of only a single
	argument for the procedure under test.
	(lib_ret_test): Likewise.
	* testsuite/runtest.all/utils.test: Whitespace clean up.
	Adjust to pass argument lists for improved lib_pat_test.
	* testsuite/runtest.all/clone_output.test: Likewise.

2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>

	* lib/remote.exp (standard_load): Fix typo on empty string.
	* runtest.exp: Adjust expression to follow GNU conventions.
	* lib/utils.exp (diff): Fix mistake in replacing [string compare]
	with "eq" instead of "ne".
	* testsuite/runtest.all/config.test: Likewise.

2018-12-06  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Replace [string match] commands involving literal
	strings and variables known to not be Tcl glob patterns with eq
	and ne.
	* config/unix.exp: Likewise.
	* lib/debugger.exp: Likewise.
	* lib/dg.exp: Likewise.
	* lib/framework.exp: Likewise.
	* lib/remote.exp: Likewise.
	* lib/utils.exp: Likewise.
	* baseboards/androideabi.exp: Likewise.
	* baseboards/multi-sim.exp: Likewise.
	* testsuite/lib/util-defs.exp: Likewise.
	* testsuite/runtest.all/config.test: Likewise.

2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.all/utils.test: Add Tcl mode marker for Emacs.
	* testsuite/runtest.all/target.test: Likewise.
	* testsuite/runtest.all/remote.test: Likewise.
	* testsuite/runtest.all/config.test: Likewise.
	* testsuite/runtest.all/clone_output.test: Likewise.

2018-12-06  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Replace '==' with 'eq' for string compares.
	Likewise, replace '!=' with 'ne'. Replace a few instances of
	[string length $str] == 0 with $str eq "".
	* config/gdb-comm.exp: Likewise.
	* lib/dg.exp: Likewise.
	* lib/framework.exp: Likewise.