@@ -1,3 +1,13 @@
+2018-12-07  Jacob Bachmeyer  <jcb62281@gmail.com>
+
+	* testsuite/runtest.all/default_procs.tcl: Whitespace clean up.
+	(lib_pat_test): Handle an argument list instead of only a single
+	argument for the procedure under test.
+	(lib_ret_test): Likewise.
+	* testsuite/runtest.all/utils.test: Whitespace clean up.  Adjust
+	to pass argument lists for improved lib_pat_test.
+	* testsuite/runtest.all/clone_output.test: Likewise.
+
 2018-12-06  Ben Elliston  <bje@gnu.org>
 
 	* doc/dejagnu.texi: Add more missing material.
